unpackaged/main/default/objects/EventApi__Seat__c/EventApi__Seat__c.object-meta.xml
<CustomObject>
    <description>Seat for the related section.</description>
    <label>Seat</label>
    <nameField>
        <displayFormat>SEAT-{00000000}</displayFormat>
        <label>Seat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>