unpackaged/main/default/objects/EventApi__Seat__c/fields/EventApi__Is_Assigned__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related seat is assigned to an attendee.</description>
    <inlineHelpText>When checked, the related seat is assigned to an attendee.</inlineHelpText>
    <label>Is Assigned</label>
    <type>Checkbox</type>
</CustomField>