unpackaged/main/default/objects/EventApi__Seat__c/fields/EventApi__Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Seat_Number__c</fullName>
    <description>An assigned number used for tracking purposes.</description>
    <inlineHelpText>An assigned number used for tracking purposes.</inlineHelpText>
    <label>Seat Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>