unpackaged/main/default/objects/EventApi__Seat__c/fields/EventApi__Section__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Section__c</fullName>
    <description>**Required** Linked to the related section.</description>
    <inlineHelpText>**Required** Linked to the related section.</inlineHelpText>
    <label>Section</label>
    <referenceTo>EventApi__Section__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>